# OpenREALM

./: .gitmodules  CMakeLists.txt
modules/realm_core/: CMakeLists.txt
modules/realm_core/include/realm_core/: conversions.h  opk.h  structs.h
modules/realm_core/src/: conversions.cpp  opk.cpp
modules/realm_densifier/realm_densifier_base/: CMakeLists.txt
modules/realm_densifier/realm_densifier_base/src/: plane_sweep.cpp
modules/realm_io/: CMakeLists.txt
modules/realm_io/include/realm_io/: gdal_continuous_writer.h  gis_export.h  realm_export.h
modules/realm_io/src/: gis_export.cpp  realm_export.cpp  realm_import.cpp
modules/realm_ortho/: CMakeLists.txt
modules/realm_ortho/include/realm_ortho/: delaunay_2d.h  gdal_warper.h
modules/realm_ortho/src/: delaunay_2d.cpp  dsm.cpp  rectification.cpp
modules/realm_stages/include/realm_stages/: mosaicing.h  pose_estimation.h  stage_base.h
modules/realm_stages/src/: densification.cpp  mosaicing.cpp  pose_estimation.cpp  stage_base.cpp
modules/realm_vslam/realm_vslam_base/: CMakeLists.txt
modules/realm_vslam/realm_vslam_base/include/realm_vslam_base/: geospatial_referencer_IF.h
my_realm/: CMakeLists.txt
my_realm/TJH_SRS/: BursaTransform.cpp  BursaTransform.h  CMakeLists.txt  Coord.cpp  Coord.h  ECEF.cpp  ECEF.h  ENU.cpp  ENU.h  FourParaTransform.cpp  FourParaTransform.h  GDAL_Config.cpp  GDAL_Config.h  Pose.cpp  Pose.h  RTSTransform.cpp  RTSTransform.h  SrsDef.cpp  SrsDef.h  SrsExport.h  SrsTransform.cpp  SrsTransform.h  TransformBase.h  UTM.cpp  UTM.h
my_realm/myrealm/: CMakeLists.txt  DataManagerWidget.cpp  DataManagerWidget.h  DataManagerWidget.ui  FrameWidget.cpp  FrameWidget.h  FrameWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  OsgWidget.cpp  OsgWidget.h  UAVConDialog.cpp  UAVConDialog.h  UAVConDialog.ui  UAVImageTransDialog.cpp  UAVImageTransDialog.h  UAVImageTransDialog.ui  WorkProfiles.cpp  WorkProfiles.h  logo.rc  main.cpp  myrealm.qrc
my_realm/myrealm_core/: CMakeLists.txt  Conversions.cpp  Conversions.h  FacesSceneNode.cpp  FacesSceneNode.h  FrameViewNode.cpp  FrameViewNode.h  FrustumSceneNode.cpp  FrustumSceneNode.h  GPSPoseInter.cpp  GPSPoseInter.h  JonFmvTKNode.cpp  JonFmvTKNode.h  MeshSceneNode.cpp  MeshSceneNode.h  MyPublisher.cpp  MyPublisher.h  MyREALM.cpp  MyREALM.h  MyREALM_Core_Exports.h  MySubscriber.cpp  MySubscriber.h  NodeParas.cpp  NodeParas.h  Scene3DNode.cpp  Scene3DNode.h  SparseSceneNode.cpp  SparseSceneNode.h  StageNode.cpp  StageNode.h  TrajSceneNode.cpp  TrajSceneNode.h  geodesy.h  grabber_exiv2_node.cpp  grabber_exiv2_node.h
my_realm/myrealm_rpc/: CMakeLists.txt  MsgConv.cpp  MsgConv.h
my_realm/myrealm_rpc/proto/: CommonData.proto  CvGridMap.proto  Depthmap.proto  Frame.proto  Georeference.proto  NodeMessage.proto  Pinhole.proto  PointCloud.proto
my_realm/myrealm_scene/: CMakeLists.txt  TileGridMap.cpp  TileGridMap.h  TileLodTree.cpp  TileLodTree.h  TileMesh.cpp  TileMesh.h  TileMeshLOD.cpp  TileMeshLOD.h  TileMeshUpdatable.cpp  TileMeshUpdatable.h  TileThreadPool.h  WorldRect2.cpp  WorldRect2.h  myrealm_scene_exports.h
my_realm/myrealm_scene_test/: CMakeLists.txt  UpdateGridMapThread.cpp  UpdateGridMapThread.h  main.cpp
my_realm/myrealm_viewer/: CMakeLists.txt  MyViewer.cpp  MyViewer.h  MyViewerExports.h
my_realm/osgTerrainMesh/: CMakeLists.txt  FacesSceneNode.cpp  FacesSceneNode.h  createHeightField.cpp  createHeightField.h  osgTerrainMesh.cpp
profiles/tjh_reco/mosaicing/: stage_settings.yaml
profiles/tjh_reco/pose_estimation/: stage_settings.yaml
